typescript/checker/tests/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts.stderr
error: Unexpected token Some(Word(break))
 --> $DIR/tests/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList6.ts:2:23
  |
2 |     public banana (x: break) { }
  |                       ^^^^^

